--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,14 +18,15 @@
         "linebreak-style": ["error", "windows"],
         "lines-between-class-members": 0,
         "import/extensions": "off",
-        "import/prefer-default-export": 0
-    }
-    ,
+        "import/prefer-default-export": 0,
+        "no-console": 0,
+        "class-methods-use-this": 0
+    },
     "settings": {
         "import/resolver": {
+            "typescript": {}, // this loads <rootdir>/tsconfig.json to eslint
             "node": {
-                "paths": ["src"],
-                "extensions": [".ts", "js"]
+                "extensions": [".js", ".ts"]
             }
         }
     }
