--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,14 +2,17 @@
     "compilerOptions": {
         "rootDir": "./src",
         "outDir": "./dist",
-        "baseUrl": "src",
+        "baseUrl": ".",
         "target": "ES5",
         "module": "CommonJS",
         "esModuleInterop": true,
+        "paths": {
+            "@/*": [ "src/*" ]
+        },
     },
-    // "include": [
-    //     "./src/**/*.ts",
-    // ],
+    "include": [
+        "src/**/*.ts",
+    ],
     "exclude": [
         "node_modules", "dist",
     ]
